--- a/templates/shablon.html
+++ b/templates/shablon.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <img src="../static/image/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      VD04_Flask_Alex_Mikhaylov
+      VD05.__Работа с шаблонизатором и HTML шаблоны__Alex_Mikhaylov
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
       <span class="navbar-toggler-icon"></span>
