--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -47,4 +47,25 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <!-- Конец БЛОГ-->
 
+<!-- Форма обратной связи -->
+<div class="container mt-5">
+        <h2>Форма обратной связи</h2>
+        <form>
+            <div class="form-group">
+                <label for="name">Имя</label>
+                <input type="text" class="form-control" id="name" placeholder="Введите ваше имя" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Введите ваш email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Сообщение</label>
+                <textarea class="form-control" id="message" rows="3" placeholder="Введите ваше сообщение"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Отправить</button>
+        </form>
+</div>
+<!-- Конец Форма обратной связи -->
+
 {% endblock %}
