--- a/app/templates/shablon.html
+++ b/app/templates/shablon.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <img src="../app/static/image/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      VD05.__Работа с шаблонизатором и HTML шаблоны__Alex_Mikhaylov
+      VD06.__Работа с Формами на сайте__Alex_Mikhaylov
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
       <span class="navbar-toggler-icon"></span>
