--- a/app/templates/shablon.html
+++ b/app/templates/shablon.html
@@ -9,14 +9,14 @@
         {% endblock %}
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../app/static/css/styles.css" rel="stylesheet"> <!-- Подключение собственного CSS файла -->
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
 </head>
 <body>
 <!-- МЕНЮ -->
 <nav class="navbar bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <img src="../app/static/image/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      <img src="{{ url_for('static', filename='image/bootstrap-logo.svg') }}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
       VD06.__Работа с Формами на сайте__Alex_Mikhaylov
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
