--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,10 +10,10 @@
     <div class="row no-gutters">
         <div class="col-12">
             <div class="banner">
-                <img src="../app/static/image/layer_1_1366x546px.png" alt="Layer 1" class="layer1">
-                <img src="../app/static/image/layer_2_1_1366x546px.png" alt="Layer 2_1" class="layer2_1">
-                <img src="../app/static/image/layer_2_2_1366x546px.png" alt="Layer 2_2" class="layer2_2">
-                <img src="../app/static/image/layer_3_1366x546px.png" alt="Layer 3" class="layer3">
+                <img src="{{ url_for('static', filename='image/layer_1_1366x546px.png') }}" alt="Layer 1" class="layer1">
+                <img src="{{ url_for('static', filename='image/layer_2_1_1366x546px.png') }}" alt="Layer 2_1" class="layer2_1">
+                <img src="{{ url_for('static', filename='image/layer_2_2_1366x546px.png') }}" alt="Layer 2_2" class="layer2_2">
+                <img src="{{ url_for('static', filename='image/layer_3_1366x546px.png') }}" alt="Layer 3" class="layer3">
                 <div class="text">Горные туры  - Путь к Шамбала</div>
             </div>
         </div>
@@ -25,31 +25,31 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="../app/static/image/tibet.png" class="card-img-top" alt="Товар 1">
+                    <img src="{{ url_for('static', filename='image/tibet.png') }}" class="card-img-top" alt="Товар 1">
                     <div class="card-body">
                         <h5 class="card-title">Тур в Непал</h5>
                         <p class="card-text">Описание товара 1.</p>
-                        <a href="#" class="btn btn-primary">{{link}}</a>
+                        <a href="#" class="btn btn-primary">{{ link }}</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="../app/static/image/kamchatka.png" class="card-img-top" alt="Товар 2">
+                    <img src="{{ url_for('static', filename='image/kamchatka.png') }}" class="card-img-top" alt="Товар 2">
                     <div class="card-body">
                         <h5 class="card-title">Тур на Камчатку</h5>
                         <p class="card-text">Описание товара 2.</p>
-                        <a href="#" class="btn btn-primary">{{link}}</a>
+                        <a href="#" class="btn btn-primary">{{ link }}</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="../app/static/image/tibet2.png" class="card-img-top" alt="Товар 3">
+                    <img src="{{ url_for('static', filename='image/tibet2.png') }}" class="card-img-top" alt="Товар 3">
                     <div class="card-body">
                         <h5 class="card-title">Тур на Тибет</h5>
                         <p class="card-text">Описание товара 3.</p>
-                        <a href="#" class="btn btn-primary">{{link}}</a>
+                        <a href="#" class="btn btn-primary">{{ link }}</a>
                     </div>
                 </div>
             </div>
