--- a/app/templates/shablon.html
+++ b/app/templates/shablon.html
@@ -50,6 +50,7 @@
             <li class="breadcrumb-item active" aria-current="page"><a href="/">Главная</a></li>
             <li class="breadcrumb-item"><a href="/blog/">Блог</a></li>
             <li class="breadcrumb-item"><a href="/contacts/">Контакты</a></li>
+            <li class="breadcrumb-item"><a href="/dz01_vd06/">ДЗ VD06. Взаимодействие с формами</a></li>
         </ol>
     </nav>
  <!-- Хлебные крошки -->
